# head-hunter

./: .gitignore  README.md  github-actions-demo.yml  pyproject.toml
.github/workflows/: main.yml
hh/: __init__.py  client.py
hh/core/: __init__.py  authorization.py  exceptions.py  http.py  paths.py  settings.py
hh/core/base/: controller.py  direction.py  repository.py
hh/direction/: category.py
hh/direction/applicant/: applicant.py
hh/direction/common/: BaseDirection.py  authorization.py  common.py  directories.py  vacancies.py
hh/direction/employer/: employer.py  resume.py  struct.py
hh/direction/employer/vacancy/: management.py
tests/: client.py  conftest.py
tests/data/: const.py
tests/integrations/: test_resume.py
